--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="preload" href="index.css" as="style"/>
 </head>
-<body>
-    <div id="root">   
+<body> 
+    <div id="root">  
+        <!-- <h1>abc</h1> it is repaced when root is render  -->
     </div>
     <!-- <script>
         const heading = document.createElement("h1")
@@ -16,8 +17,7 @@
         root.appendChild(heading)
     </script> -->
    
-<script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-<script src="App.js"></script>
+
+<script type="module" src="src/App.js"></script>
 </body>
 </html>
